--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Exokit home environment",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/modulesio/exokit-home/issues"
   },
-  "homepage": "https://github.com/modulesio/exokit-home#readme"
+  "homepage": "https://github.com/modulesio/exokit-home#readme",
+  "devDependencies": {
+    "express": "^4.16.3"
+  }
 }
